--- a/fastlane/metadata/es-ES/release_notes.txt
+++ b/fastlane/metadata/es-ES/release_notes.txt
@@ -1,5 +1,9 @@
-¡Hay un nuevo bloque en la ciudad! Con el bloque de incrustación, puedes incrustar contenido de tus servicios favoritos, como YouTube, TikTok, Instagram y otros. Mantente atento a las nuevas funcionalidades que vendrán.
+En la versión 18.0 hemos optimizado las imágenes usadas en los temas, permitiéndote descargas más rápidas y un menor impacto en tu plan de datos móviles.
 
-¿Te gusta nuestra característica de recordatorios de blogueo? Antes, solo los administradores del sitio podían configurar los recordatorios, pero ahora hemos activado esta característica para la gente que puede editar entradas en tu sitio (editores, autores y colaboradores).
+Ahora puedes establecer o eliminar una imagen destacada para una entrada desde los ajustes del bloque de imágenes. Y, en caso de que lo olvides, un nuevo banner «destacado» resalta tu selección actual.
 
-Hemos hecho mejoras en la moderación de comentarios, asegurando que los usuarios apropiados pueden deslizar hacia la izquierda para aprobar/desaprobar y mandar a la papelera los comentarios. También hemos proporcionado compatibilidad para los estilos globales, activando ajustes como la personalización del color y del fondo para los temas de edición completa del sitio.
+Ahora también tenemos un aspecto unificado en el diseño de portada, los comentarios y los avisos. Y, a la hora de elegir un dominio o un diseño para tu sitio, los encabezados han sido perfeccionados para la accesibilidad en dispositivos configurados para usar tamaños de texto mayores.
+
+Ahora, cuando te hacemos saber que has publicado una entrada con un aviso dentro de la aplicación, verás cualquier signo «&» en tu título mostrado por completo, no en su forma HTML.
+
+Por último, pero no menos importante, hemos suavizado un bache en el camino cuando se recuperan tokens de identificación invalidados.
