--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,5 +1,9 @@
-Новый блок, новый блок! С помощью блока встраивания вы можете вставлять содержимое с ваших любимых сайтов, таких как YouTube, TikTok, Instagram и других. В будущем также появятся дополнительные функции.
+В версии 18.0 мы оптимизировали изображения, используемые для тем, благодаря чему ускорили загрузку и снизили нагрузку на ваш тарифный план для мобильных данных.
 
-Нравится наша функция напоминаний о блогах? Раньше только администраторы сайта могли настраивать напоминания, но теперь мы включили эту функцию для всех, кто может редактировать записи на вашем сайте (редакторы, авторы и участники).
+Теперь вы можете установить или удалить избранное изображение для записей в настройках блока изображений. А на случай, если вы забудете, новый баннер с «избранными» выделит ваш текущий выбор.
 
-Мы улучшили модерацию комментариев, теперь можно проводить пальцем влево, чтобы одобрять / отклонять и удалять комментарии. Мы также обеспечили поддержку глобальных стилей, включив такие настройки, как настройка цвета и фона для тем полного редактирования сайта.
+Кроме того, что касается дизайна, комментарии и уведомления теперь имеют унифицированный вид. А когда дело доходит до выбора домена или дизайна для вашего сайта, заголовки были улучшены для обеспечения доступности на устройствах, настроенных на использование текста большего размера.
+
+При уведомлении в приложении о публикации вы увидите, что все амперсанды в заголовке отображаются в полном виде, а не сущностями HTML.
+
+И последнее, но не менее важное: мы сгладили препятствия при восстановлении после недействительных токенов аутентификации.
