Updates release notes.

--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,6 +1,6 @@
 18.1
 -----
-
+* [*] Reader: Fixes an issue where the top of an article could be cropped after rotating a device. [#17041]
 
 18.0
 -----
